[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/enemies/bosses/Mago-final-final.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/boss/boss_4.gd" type="Script" id=2]
[ext_resource path="res://scenes/enemies/boss_ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/godot-behavior-tree-plugin/behavior_tree.gd" type="Script" id=4]
[ext_resource path="res://scripts/enemies/boss/behavior/is_active.gd" type="Script" id=5]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/takeDamage.gd" type="Script" id=6]
[ext_resource path="res://addons/godot-behavior-tree-plugin/selector.gd" type="Script" id=7]
[ext_resource path="res://addons/godot-behavior-tree-plugin/sequence.gd" type="Script" id=8]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/hit.gd" type="Script" id=10]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 131.264

[sub_resource type="Animation" id=3]
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 107.314, 153.528 )

[sub_resource type="CircleShape2D" id=5]
radius = 59.4069

[sub_resource type="CircleShape2D" id=6]
radius = 61.4974

[node name="boss_4" type="RigidBody2D"]
collision_layer = 4
collision_mask = 5
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 496.857, 38.0976 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 109.798, 82.8795 )
scale = Vector2( -1.78822, 1.2726 )
z_index = -1
texture = ExtResource( 1 )
flip_h = true

[node name="animation" type="AnimationPlayer" parent="."]
anims/perf_damage = SubResource( 3 )

[node name="BehaviorTree" type="Node" parent="."]
script = ExtResource( 4 )

[node name="BehaviorSequence" type="Node" parent="BehaviorTree"]
script = ExtResource( 8 )

[node name="is_active" type="Node" parent="BehaviorTree/BehaviorSequence"]
script = ExtResource( 5 )

[node name="BehaviorSelector" type="Node" parent="BehaviorTree/BehaviorSequence"]
script = ExtResource( 7 )

[node name="BehaviorSequence2" type="Node" parent="BehaviorTree/BehaviorSequence/BehaviorSelector"]
script = ExtResource( 8 )

[node name="is_hit" type="Node" parent="BehaviorTree/BehaviorSequence/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 10 )

[node name="take_dmg" type="Node" parent="BehaviorTree/BehaviorSequence/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 6 )

[node name="activation_trigger" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="activation_trigger"]
position = Vector2( 580.323, 219.185 )
shape = SubResource( 4 )

[node name="spawner_l" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="shape" type="CollisionShape2D" parent="spawner_l"]
position = Vector2( -260.628, 286.055 )
shape = SubResource( 5 )

[node name="spawner_r" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="shape" type="CollisionShape2D" parent="spawner_r"]
position = Vector2( 945.041, 275.46 )
shape = SubResource( 6 )

[node name="timer_l" type="Timer" parent="."]
wait_time = 8.0

[node name="timer_r" type="Timer" parent="."]
wait_time = 8.0

[connection signal="body_entered" from="." to="." method="_on_mob_body_entered"]
[connection signal="animation_finished" from="animation" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="activation_trigger" to="." method="_on_activation_trigger_body_entered"]
[connection signal="timeout" from="timer_l" to="." method="spawn_enemy" binds= [ false ]]
[connection signal="timeout" from="timer_r" to="." method="spawn_enemy" binds= [ true ]]
